# wxExampleApp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  NewWindow.cpp  README.md  app.cpp  app.hpp  book.hpp  library.cpp  library.hpp  mainframe.cpp  mainframe.hpp  name  patron.hpp  test.md  unit.hpp  unit_test.cpp  weapon.hpp
include/: CMakeLists.txt  NewWindow.hpp  app.hpp  mainframe.hpp  unit.hpp
src/: CMakeLists.txt  NewWindow.cpp  app.cpp  mainframe.cpp  unit.cpp
tests/: CMakeLists.txt  unit_test.cpp
